바벨 설정 중

--- a/package.json
+++ b/package.json
@@ -4,5 +4,17 @@
   "main": "index.js",
   "repository": "https://github.com/DongHyunKims/movieql.git",
   "author": "alex <dhkim.ce@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "graphql-yoga": "^1.18.1"
+  },
+  "scripts": {
+    "start": "nodemon --exec babel-node index.js"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.5"
+  }
 }
