--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-    "presets": ["env", "stage-3"]
+    "presets": [
+        [
+            "@babel/preset-env",
+            {
+                "targets": {
+                    "browsers": [
+                        "last 2 versions",
+                        ">= 5% in KR"
+                    ]
+                }
+            }
+        ]
+    ]
 }
