--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "alex <dhkim.ce@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "graphql-yoga": "^1.18.1"
+    "graphql-yoga": "^1.18.1",
+    "nodemon": "^1.19.1"
   },
   "scripts": {
     "start": "nodemon --exec babel-node index.js"
@@ -14,7 +15,7 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
-    "@babel/polyfill": "^7.4.4",
+    "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5"
   }
 }
